<resources>
    <string name="app_name">GeoTrack</string>
    <string name="map_activity_name">Maps Activity</string>
    <string name="list_activity_name">Maps Activity</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    
    
    <string name="welcome_text">Welcome to GeoTrack!\n
        GeoTrack tracks user\'s movement and shows his\/her movement in handy ways.          
        </string>    
    <string name="show_infotext">Show infotext</string>
    <string name="info_text">Welcome to GeoTrack!\n
        GeoTrack is the final excercise for course\n
        TIES425 Programming for Mobile Terminals\n               
        </string>        
    
    <string name="start_button_displaytext">Start tagging</string>
    <string name="stop_button_displaytext">Stop tagging</string>
    
    <string name="list_button_displaytext">Show taglist</string>
    <string name="map_button_displaytext">Show map</string>
    <string name="no_location_providers_enabled">No location providers enabled</string>
</resources>